--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,304 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  grid-template-rows: 534px;
+  align-items: flex-start;
+  gap: 30px;
+  margin-right: 15px;
+  margin-top: 43px;
+}
+
+.search-form {
+  display: flex;
+  align-items: flex-end;
+  height: 54px;
+  width: 711px;
+  justify-content: space-between;
+  margin-top: 16px;
+}
+
+.title {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.title .content__accent {
+  color: #545050;
+}
+
+.search-form__textfield {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 10px;
+  width: 225px;
+  height: 27px;
+  background-color: #1b1919;
+  border-left: none;
+  border-right: none;
+  border-top: 1px solid #FFFFFFB2;
+  border-bottom: 1px solid #FFFFFFB2;
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: rgba(255, 255, 255, 0.7);
+  appearance: none;
+}
+
+.search-form__textfield:has(:focus-visible) {
+  border-top: none;
+  border-bottom: none;
+  outline: 1px solid #FFFFFFB2;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #FFFFFFB2;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 33px;
+}
+
+.search-form__pseudo-checkbox {
+  position: relative;
+  padding: 0px;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #FFFFFF;
+  background: none;
+  margin: 0;
+  appearance: none;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__pseudo-checkbox::after {
+  opacity: 0;
+  content: '';
+  position: absolute;
+  background: #fff;
+  width: 15px;
+  height: 15px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.search-form__label-text {
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  margin-left: 5px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: Auto;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  padding-bottom: 5px;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: flex-start;
+  width: 393px;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  max-width: 196px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
+.content__card-link {
+  text-decoration: none;
+}
+
+.content__video-card-description {
+  width: 196px;
+  height: 17px;
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
+
+.content__list-container {
+  position: relative;
+  max-height: 298px;
+  overflow-y: auto;
+  margin-top: 26px;
+}
+
+.content__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px; 
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: Auto;
+  text-decoration-color: #FFFFFF;
+}
+
+.content__video-card:focus {
+  outline: none;
+}
+
+.content__video-card:active {
+  background-color: #545050;
+}
+
+.content__video-card:focus-visible {
+  outline: 1px solid #FFFFFFB2;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.button {
+  height: 34px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 10px;
+  background: none;
+  border: 1px solid #FFFFFF;
+  font-family: 'Fira Sans Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.button.search-form__submit-button {
+  width: 194px;
+}
+
+.button.more-button {
+  display: flex;
+  align-items: center;
+  width: 390px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: Auto;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid #FFFFFFB2;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.result__video-container {
+  position: relative;
+  height: 386px;
+  width: 711px;
+  margin-top: 78px;
+}
+
+.result__video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 
 h1,
 h2,
@@ -27,9 +317,11 @@ ul,
 ol,
 li,
 blockquote,
+
 fieldset {
   margin: 0;
   padding: 0;
+  border: none;
 }
 
 ul,
