--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   inline-size: 1200px;
   block-size: 100%;
   color: #fff;
@@ -26,8 +27,6 @@ html {
   grid-template-rows: 534px;
   align-items: flex-start;
   gap: 30px;
-  margin-right: 15px;
-  margin-top: 43px;
 }
 
 .search-form {
