--- a/styles/style.css
+++ b/styles/style.css
@@ -18,12 +18,33 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+
+fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+ul,
+ol {
+  list-style: none;
 }
 
 .content {
   display: grid;
   grid-template-columns: 711px 399px;
-  grid-template-rows: 534px;
   justify-content: center;
   gap: 30px;
 }
@@ -31,14 +52,14 @@ html {
 .search-form {
   display: flex;
   align-items: flex-end;
-  height: 54px;
-  width: 711px;
+  max-height: 54px;
+  min-width: 711px;
   justify-content: space-between;
   margin-top: 16px;
 }
 
 .title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
@@ -47,7 +68,7 @@ html {
   color: #FFFFFF;
 }
 
-.title .content__accent {
+.content__accent {
   color: #545050;
 }
 
@@ -58,19 +79,23 @@ html {
   padding: 0px;
   gap: 10px;
   width: 225px;
-  height: 27px;
+  min-height: 27px;
   background-color: #1b1919;
   border-left: none;
   border-right: none;
   border-top: 1px solid #FFFFFFB2;
   border-bottom: 1px solid #FFFFFFB2;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: rgba(255, 255, 255, 0.7);
+  color: #FFFFFF;
   appearance: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .search-form__textfield:has(:focus-visible) {
@@ -94,7 +119,7 @@ html {
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -135,7 +160,7 @@ html {
 }
 
 .search-form__label-text {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -145,10 +170,11 @@ html {
   cursor: pointer;
 }
 
-.search-form__label:hover .search-form__label-text {
+.search-form__label:hover {
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-thickness: Auto;
+  cursor: pointer;
 }
 
 .search-form__checkbox-list {
@@ -164,7 +190,7 @@ html {
 }
 
 .content__video-card-title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -184,13 +210,13 @@ html {
 
 .content__video-card-description {
   width: 196px;
-  height: 17px;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 25px;
+  line-height: 16px;
   color: #FFFFFF;
+  overflow-y: auto;
 }
 
 .content__list-container {
@@ -206,10 +232,7 @@ html {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
-
-.content__card-link_current {
-  background-color: #545050;
+  margin-bottom: 30px;
 }
 
 .content__video-card:hover {
@@ -227,6 +250,11 @@ html {
   background-color: #545050;
 }
 
+.content__card-link_current > .content__video-card {
+  background-color: #545050;
+  text-decoration: none;
+}
+
 .content__video-card:focus-visible {
   outline: 1px solid #FFFFFFB2;
   padding-left: 3px;
@@ -234,7 +262,7 @@ html {
 }
 
 .button {
-  height: 34px;
+  min-height: 34px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -243,7 +271,7 @@ html {
   gap: 10px;
   background: none;
   border: 1px solid #FFFFFF;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -253,14 +281,14 @@ html {
   cursor: pointer;
 }
 
-.button.search-form__submit-button {
-  width: 194px;
+.search-form__submit-button {
+  min-width: 194px;
 }
 
-.button.more-button {
+.more-button {
   display: flex;
   align-items: center;
-  width: 390px;
+  width: 100%;
 }
 
 .button:hover {
@@ -305,27 +333,6 @@ html {
   height: 100%;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-
-fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-ul,
-ol {
-  list-style: none;
-}
 
 /* Кастомный скроллбар */
 .custom-scrollbar::-webkit-scrollbar {
